# dreamingspires-server

./: .gitignore  .gitmodules  README.md  app.db  build_sass  config.py  dreamingspires-server.service  migrate_db  pyproject.toml  run.py  run2.py  todo.txt  tutorial.txt
app/: __init__.py  admin_interface.py  models.py  public_forms.py  server.py  temp_models.py  types.py  utils.py  views.py
app/extensions/: chat.py  decorators.py  email.py  forms.py  jobs.py  sidebar.py  socketio_helpers.py  timeline.py  token.py
app/mod_auth/: controllers.py  forms.py  models.py
app/mod_mail/: controllers.py  forms.py  models.py
app/mod_marketplace/: controllers.py  forms.py
app/mod_organisations/: controllers.py  forms.py
app/mod_profile/: controllers.py  forms.py
app/mod_projects/: controllers.py  forms.py  models.py  sidebar.txt
app/templates/: base.html  client.html  developer.html  error.html  index.html
app/templates/auth/: login.html  not_yet_activated.html  register.html  register_client.html  register_client_temp.html  register_developer.html  signin.html  thanks_client.html  thanks_developer.html  thanks_for_registering.html
app/templates/email/: confirm_user_email.html  developer_signup_registered.html  project_idea_registered.html
app/templates/includes/: cards.html  client_landing.html  client_register.html  cta.html  developer_register.html  general_timeline.html  landing.html  login_form.html  portfolio.html  testimonials.html  timeline.html  who_are_we.html
app/templates/macros/: bulma_form.html  flash.html  formhelpers.html  globals.html
app/templates/mail/: group.html  inbox.html
app/templates/marketplace/: dashboard.html  marketplace.html  project.html
app/templates/organisations/: add_users.html  create_project.html  department.html
app/templates/profile/: create_department.html  developer_profile.html  landing_page.html  profile.html
app/templates/projects/: dashboard.html  marketplace.html  projects.html
app/templates/public/: blog.html  client_faq.html  contact.html  (+8 more)
sass/: example.scss  main.scss
tests/: test_dreamingspires_server.py
(+9 files in other folders)
