[tool.poetry]
name = "dreamingspires-server"
version = "0.0.1"
description = ""
authors = ["Edd Salkield <edd@salkield.uk>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.3"
Flask-WTF = "^0.14.3"
werkzeug = "^1.0.1"
email_validator = "^1.1.1"
Flask-Navigation = "^0.2.0"
SQLAlchemy-ImageAttach = "^1.1.0"
filedepot = "^0.7.1"
flask-principal = "^0.4.0"
flask-login = "^0.5.0"
is-safe-url = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
ds-dev-server = "run:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

